Fix extra padding issue #101

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+#main {
+  padding: 0px;
+}
+
+
 a:hover {
   text-decoration: none;
 }
